# protoc-gen-temporal-interop

./: .gitignore  AGENTS.md  CI-SPEC.md  Cargo.toml  PLAN.md  README.md  SPEC.md  buf.gen.yaml  buf.yaml  justfile
.github/workflows/: ci.yml
crates/interop-harness/: Cargo.toml
crates/interop-harness/src/: main.rs
crates/interop-proto/: Cargo.toml  build.rs
crates/interop-proto/src/: lib.rs
crates/interop-worker/: Cargo.toml
crates/interop-worker/src/: main.rs
pins/: versions.env
proto/interop/v1/: interop.proto
ts-client/: package-lock.json  package.json  tsconfig.json
ts-client/src/: cli.ts  data-converter.ts
