[workspace]
resolver = "2"
members = [
    "crates/interop-proto",
    "crates/interop-worker",
    "crates/interop-harness",
]

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prost = "0.13"
temporal-proto-runtime = { git = "https://github.com/nu-sync/protoc-gen-rust-temporal", rev = "dae1bf54b60e96a643cb3bd6b314bcbf5715f383", features = ["sdk"] }
temporal-proto-runtime-bridge = { git = "https://github.com/nu-sync/protoc-gen-rust-temporal", rev = "dae1bf54b60e96a643cb3bd6b314bcbf5715f383", features = ["worker"] }
temporalio-client = "=0.4.0"
temporalio-common = "=0.4.0"
temporalio-sdk = "=0.4.0"
temporalio-sdk-core = "=0.4.0"
temporalio-macros = "=0.4.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[patch.crates-io]
temporalio-client = { git = "https://github.com/wcygan/sdk-core.git", rev = "d5b706e8f0a1c6ec19f04ad53687dbc8df4b7366" }
temporalio-common = { git = "https://github.com/wcygan/sdk-core.git", rev = "d5b706e8f0a1c6ec19f04ad53687dbc8df4b7366" }
temporalio-sdk = { git = "https://github.com/wcygan/sdk-core.git", rev = "d5b706e8f0a1c6ec19f04ad53687dbc8df4b7366" }
temporalio-sdk-core = { git = "https://github.com/wcygan/sdk-core.git", rev = "d5b706e8f0a1c6ec19f04ad53687dbc8df4b7366" }
temporalio-macros = { git = "https://github.com/wcygan/sdk-core.git", rev = "d5b706e8f0a1c6ec19f04ad53687dbc8df4b7366" }
