[package]
name = "interop-harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
temporalio-sdk-core = { workspace = true, features = ["ephemeral-server"] }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

