[package]
name = "interop-proto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
prost.workspace = true
temporal-proto-runtime.workspace = true
temporal-proto-runtime-bridge.workspace = true
